Bug 856602 - RasterImage::DecodeJob should not reschedule itself if it can't make progress. r=tn

--HG--
extra : rebase_source : b8a9b535771f2bb607b8fbf1244ba2248452ac60